fix: fix payment flow to reduce available units of products
